[feat] Add enhance UI and progress indication for folder scan
